removed username and laptop name and added a bunch of $'s